Adds support for telegram notifications.

--- a/.env_example
+++ b/.env_example
@@ -2,3 +2,6 @@
 BLINK_CAMERA_AUTO_ARM_USERNAME=<Blink web application username>
 BLINK_CAMERA_AUTO_ARM_PASSWORD=<Blink web application password>
 BLINK_CAMERA_AUTO_ARM_DEVICES = 192.168.0.1, 192.168.0.2 (list of your ip addresses to check)
+
+TELEGRAM_BOT_TOKEN=<Telegram HTTP API token>
+TELEGRAM_CHAT_ID=<Telegram chat person or group id to send messages>
