--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
+anyio==3.6.2
 blinkpy==0.19.2
 certifi==2022.6.15
 charset-normalizer==2.1.1
+h11==0.14.0
+httpcore==0.17.0
+httpx==0.24.0
 idna==3.3
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 python-slugify==6.1.2
+python-telegram-bot==20.3
 requests==2.28.1
 six==1.16.0
+sniffio==1.3.0
 text-unidecode==1.3
 urllib3==1.26.11
